TP4/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verifier-signature
spec:
  validationFailureAction: Enforce
  rules:
    - name: verify-api
      match:
        any:
          - resources:
              kinds: [Pod]
      verifyImages:
        - imageReferences:
            - "rg.fr-par.scw.cloud/ggodon-dauvel/*"
          imageRegistryCredentials:
            secrets:
              - scaleway-registry-secret
            allowInsecureRegistry: false
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEBevcpknZrJ3Gh0kQV7Ja1JwHuPkL
[...]
                      -----END PUBLIC KEY-----
